--- a/benchmark/benchmark.csproj
+++ b/benchmark/benchmark.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
+    <ProjectReference Include="..\lib\lib.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="benchmarkdotnet" Version="0.11.0" />
+  </ItemGroup>
+
+
 
 </Project>
