--- a/console/console.csproj
+++ b/console/console.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <None Update="fuel.csv" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="manufacturers.csv" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
